# handmade

./: CMakeLists.txt
engine/: CMakeLists.txt
engine/include/: defines.h  entry.h  game_types.h  test.h
engine/include/containers/: darray.c  darray.h
engine/include/core/: application.h  asserts.h  clock.h  event.h  input.h  logger.h  memory.h  string.h
engine/include/platform/: platform.h
engine/include/renderer/: renderer_backend.h  renderer_frontend.h  renderer_types.h
engine/include/renderer/vulkan/: vulkan_backend.h  vulkan_device.h  vulkan_platform.h  vulkan_types.h
engine/src/: test.c
engine/src/containers/: darray.c
engine/src/core/: application.c  clock.c  event.c  input.c  logger.c  memory.c  string.c
engine/src/platform/: platform_macosx.c  platform_sdl.c
engine/src/renderer/: renderer_backend.c  renderer_frontend.c
engine/src/renderer/vulkan/: vulkan_backend.c  vulkan_device.c
engine/tests/: CMakeLists.txt  check_check.h  tests.c
engine/tests/containers/: check_darray.c  check_memory.c
testbed/: CMakeLists.txt
testbed/src/: entry.c  game.c  game.h  main.c
